# tensorflow_cpp_packaging

./: .gitignore  1_clone_tensorflow.sh  2_make_wheel_for_headers.sh  3_build_tensorflow_cpp_arm_crosscompiling_rpi.sh  3_build_tensorflow_cpp_arm_rpi.sh  3_build_tensorflow_cpp_generic_cuda_x86_64.sh  3_build_tensorflow_cpp_generic_x86_64.sh  3_build_tensorflow_cpp_legacy_x86_64.sh  3_build_tensorflow_cpp_optimized_cuda_x86_64.sh  3_build_tensorflow_cpp_optimized_x86_64.sh  4_generate_arm_rpi_package.sh  4_generate_generic_cuda_x86_64_package.sh  4_generate_generic_x86_64_package.sh  4_generate_legacy_x86_64_package.sh  4_generate_optimized_cuda_x86_64_package.sh  4_generate_optimized_x86_64_package.sh  LICENSE  README.md  clean_packaging.sh  tf_arm.patch  tf_arm_crosscompiling.patch  tf_base.patch  tf_generic_x86_64.patch  tf_legacy_x86_64.patch  tf_nccl.patch  tf_optimized_x86_64.patch  tf_tensor_fix.diff  tf_tensor_fix.txt
packaging/: CMakeLists.txt  TensorFlowCppConfig.cmake.in  TensorFlowCppConfigVersion.cmake.in
packaging/debian/: changelog.in  control.in  copyright  rules  rules.in
rpi_crosscompiling_fixes/: Makefile
rpi_examples/: CMakeLists.txt  README.md  label_image.cc
utils/: tf_freezer.py
